--- a/Twitch/index.html
+++ b/Twitch/index.html
@@ -565,7 +565,7 @@
     <script>
         /*get orders */
         let getOrders = document.createElement('script')
-        getOrders.src = 'http://twitch-spam.herokuapp.com/api.getOrders?callback=inputOrders'
+        getOrders.src = '//twitch-spam.herokuapp.com/api.getOrders?callback=inputOrders'
         document.body.appendChild(getOrders)
         
         const inputOrders = (orders) => {
