--- a/Twitch/index.html
+++ b/Twitch/index.html
@@ -216,8 +216,8 @@
 
                     #main > div:nth-child(1) > div[type="ordersList"] {
                         width: 100%;
-                        height: calc(100% - 60px * var(--heightR));
-                        padding: 0px calc(95vw * 0.3333 * 0.04) 10px calc(95vw * 0.3333 * 0.04);
+                        height: calc(100% - 50px * var(--heightR));
+                        padding: 0px calc(95vw * 0.3333 * 0.04);
                         box-sizing: border-box;
                         overflow: overlay;
                         display: none;
