--- a/Twitch/index.html
+++ b/Twitch/index.html
@@ -304,7 +304,7 @@
                 color: var(--white);
                 font-size: calc(30px * var(--heightR));
                 background-color: var(--green);
-                transition: background-color .5s, left .5s, border-radius .5s, width .5s;
+                transition: background-color .5s, left .5s, border-radius .5s, width .5s, opacity .25s;
             }
 
             #order:hover {
@@ -321,6 +321,8 @@
                 display: none;
                 width: calc(450px * var(--heightR));
                 left: calc(50% - 225px * var(--heightR));
+                opacity: 0;
+                transition: opacity .25s;
             }
 
             div[type="orderProc"][step="1"] {
@@ -705,7 +707,7 @@
                 <div type="info">В данный момент активных заказов нету</div>
             </div>
             <div>
-                <div id="order" onclick="this.style.display = 'none'; this.nextElementSibling.style.display = 'block'">ОФОРМИТЬ ЗАКАЗ</div>
+                <div id="order" onclick="this.style.opacity = 0; setTimeout(() => {this.style.display = 'none'; this.nextElementSibling.style.display = 'block'; setTimeout(() => {this.nextElementSibling.style.opacity = 1;}, 50);}, 250);">ОФОРМИТЬ ЗАКАЗ</div>
                 <div type="orderProc" step="1">
                     <input type="text" data="text" placeholder="ТЕКСТ СООБЩЕНИЯ" active="false">
                     <input type="text" data="count" placeholder="КОЛИЧЕСТВО (БОЛЬШЕ 500000)" active="false">
@@ -740,24 +742,56 @@
 
         /* orderProc */
         const orderProcZeroStep = (el) => {
-            el.parentNode.style.display = 'none'
-            document.getElementById('order').style.display = 'block'
+            el.parentNode.style.opacity = 0
+            setTimeout(() => {
+                el.parentNode.style.display = 'none'
+                document.getElementById('order').style.display = 'block'
+                setTimeout(() => {document.getElementById('order').style.opacity = 1;}, 50)
+            }, 250)
         }
 
         const orderSend = (el) => {
-            let orderSend = document.createElement('script')
-            orderSend.src = `${document.location.origin == 'file://'? 'http:' : ''}//twitch-spam.herokuapp.com/api.getOffers?callback=inputOrders`
-            document.body.appendChild(orderSend)
-
             const blocks = [
                 document.querySelector('input[data="count"]'),
                 document.querySelector('input[data="text"]'),
                 document.querySelector('input[data="email"]')
             ]
+            let orderSend = document.createElement('script')
+            orderSend.src = `${document.location.origin == 'file://'? 'http:' : ''}//twitch-spam.herokuapp.com/api.addOrder?count=${blocks[0].value}&caption=${blocks[1].value}&email=${blocks[2].value}&callback=orderCallback`
+            document.body.appendChild(orderSend)
 
             for (let i = 0, len = blocks.length; i < len; i++) blocks[i].setAttribute('readonly', 'readonly')
             el.setAttribute('active', 'wait')
             el.innerHTML = 'ПОДОЖДИТЕ НЕМНОГО'
+        }
+
+        const orderCallback = (res) => {
+            document.querySelector('div[type="orderProc"][step="1"]').style.opacity = 0
+            setTimeout(() => {
+                document.querySelector('div[type="orderProc"][step="1"]').style.display = 'none'
+                const blocks = [
+                    document.querySelector('input[data="count"]'),
+                    document.querySelector('input[data="text"]'),
+                    document.querySelector('input[data="email"]')
+                ]
+
+                for (let i = 0, len = blocks.length; i < len; i++) {
+                    blocks[i].removeAttribute('readonly')
+                    blocks[i].value = ''
+                    blocks[i].setAttribute('complete', 'false')
+                }
+                document.querySelectorAll('div[type="summary"] span')[0].innerHTML = 0
+                document.querySelector('div[type="orderProc"][step="1"] div[type="orderButton"]').setAttribute('active', 'false')
+                document.querySelector('div[type="orderProc"][step="1"] div[type="orderButton"]').innerHTML = 'ПРОДОЛЖИТЬ'
+
+                if (res == 'ok') {
+                    document.querySelector('div[type="orderProc"][step="2"]').style.display = 'block'
+                    setTimeout(() => {document.querySelector('div[type="orderProc"][step="2"]').style.opacity = 1;}, 50)
+                } else {
+                    document.querySelector('div[type="orderProc"][step="error"]').style.display = 'block'
+                    setTimeout(() => {document.querySelector('div[type="orderProc"][step="error"]').style.opacity = 1;}, 50)
+                }
+            }, 250)
         }
 
         const orderOneInput = (e) => {
@@ -842,11 +876,13 @@
             ]
 
             for (let i = 0, len = orders.length; i < len; i++) {
-                const date = orders[i].date.split('.')
-                let order = document.createElement('div')
-                order.setAttribute('elem', 'order')
-                order.innerHTML = `<div>${orders[i].offerNumber}</div><div>${date[0]} ${word[1][parseInt(date[1])]} ${parseInt(date[2]) + 1900}</div><div>${word[0][parseInt(orders[i].type)]} <span>${orders[i].caption}</span></div><div>${orders[i].completedCount}/${orders[i].totalCount}</div>`
-                document.querySelector('div[type="ordersList"]').appendChild(order)
+                if (orders[i].status == 1) {
+                    const date = orders[i].date.split('.')
+                    let order = document.createElement('div')
+                    order.setAttribute('elem', 'order')
+                    order.innerHTML = `<div>${orders[i].offerNumber}</div><div>${date[0]} ${word[1][parseInt(date[1])]} ${parseInt(date[2]) + 1900}</div><div>${word[0][parseInt(orders[i].type)]} <span>${orders[i].caption}</span></div><div>${orders[i].completedCount}/${orders[i].totalCount}</div>`
+                    document.querySelector('div[type="ordersList"]').appendChild(order)
+                }
             }
 
             if (orders.length > 0) document.querySelectorAll('#main div')[0].setAttribute('data', 'loaded')
